MSP 7/26-2 -> topic d -> Fix alignment and font sizes

--- a/src/pages/accounts/style.scss
+++ b/src/pages/accounts/style.scss
@@ -155,6 +155,33 @@
         }
     }
 
+    .well {
+        .dropdown-trigger.no-decoration .ant-select.auto-height .ant-select-selector {
+            height: 34px;
+            margin: 0;
+            padding: 0;
+            .ant-select-selection-search {
+                position: absolute;
+                top: 2px;
+                right: 4px;
+                bottom: 2px;
+                left: 4px;
+            }
+        }
+        .transaction-list-row {
+            margin-left: -5px !important;
+            margin-right: -4px !important;
+            border: none !important;
+            padding: 0 !important;
+            height: auto;
+            .rate-cell {
+                .interval {
+                    font-size: 0.8rem;
+                }
+            }
+        }
+    }
+
     .transaction-list-row {
         border-radius: unset;
         border-top: none;
